added the seo optimization, removed all the unused UI and added new 3d to the home sectino

--- a/index.html
+++ b/index.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Demos</title>
+
+    <title>Empowering Blockchain Solutions</title>
+    <meta
+      name="description"
+      content="Leading Web3 Crypto Agency offering bespoke blockchain solutions, smart contract development, and crypto consultancy to revolutionize your digital assets strategy."
+    />
+    <meta
+      name="keywords"
+      content="web3, crypto agency, blockchain solutions, smart contracts, digital assets, crypto consultancy"
+    />
+    <meta name="author" content="Demos" />
   </head>
+
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Empowering Blockchain Solutions" />
+  <meta
+    property="og:description"
+    content="Discover top-tier blockchain solutions, smart contract development, and comprehensive crypto consultancy to elevate your digital assets."
+  />
+  <meta property="og:url" content="https://demos-two-mu.vercel.app" />
+  <meta property="og:site_name" content="Demos" />
+
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
