--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       content="web3, crypto agency, blockchain solutions, smart contracts, digital assets, crypto consultancy"
     />
     <meta name="author" content="Demos" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Public+Sans:wght@100..900&family=Red+Hat+Display:wght@300..900&display=swap" rel="stylesheet">
   </head>
 
   <meta property="og:type" content="website" />
